[package]
name = "mosaic-server"
version = "0.1.0"
description = "Mosaic server library"
edition = "2024"
license = "MIT"
authors = [ "Mike Dilger <mike@mikedilger.com>" ]

[dependencies]
dashmap = "6.1"
mosaic-core = { git = "https://github.com/mikedilger/mosaic-core", branch = "master" }
mosaic-net = { git = "https://github.com/mikedilger/mosaic-net", branch = "master" }
tokio = { version = "1", features = [ "full" ] }

[dev-dependencies]
quinn = "0.11"
